--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,17 +1,53 @@
-html,
-body {
-    padding: 0;
-    margin: 0;
+* {
+    text-transform: none!important;
 }
 
-.logo {
-    width: 60px;
-    height: 60px;
+body, html {
+    overflow: hidden; /* Prevents scrolling */
+    height: 100%; /* Full height */
+}
+
+.sidebarTab{
+    width: 50px;
+    max-width: 50px!important;
+}
+
+.divider-hitbox {
+    cursor: col-resize;
+    align-self: stretch;
+    display: flex;
+    align-items: center;
+    padding: 0 .1rem;
+    max-width: 4px;
+}
+
+.divider {
+    height: 100%;
+    border: 1px solid #404040;
+}
+
+.tabCloseIcon {
+    font-size: 10px;
+}
+
+.rightPane {
+    flex: 1;
+}
+
+.splitView {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.requestListType {
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #fff;
+    text-align: right;
     margin-right: 10px;
-
-    font-size: 20px;
-    color: #ffffff;
-    text-align: center;
-    line-height: 60px;
+    padding-right: 10px;
+    border-right: #404040 1px solid;
 }
-
