--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,10 +21,10 @@ body, html {
     max-width: 4px;
 }
 
-.divider {
-    height: 100%;
-    border: 1px solid #404040;
-}
+/*.divider {*/
+/*    height: 100%;*/
+/*    border: 1px solid #404040;*/
+/*}*/
 
 .tabCloseIcon {
     font-size: 10px;
@@ -39,15 +39,4 @@ body, html {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-}
-
-.requestListType {
-    font-size: 14px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #fff;
-    text-align: right;
-    margin-right: 10px;
-    padding-right: 10px;
-    border-right: #404040 1px solid;
 }
